Fri Aug 29 12:28:12 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: fixing the bug #120971 on cdata-section-elements
	  with namespaced names reported by Steve Hay
	* tests/docs/Makefile.am tests/docs/bug-129.*
	  tests/general/Makefile.am tests/general/bug-129*: added the
	  test to the regression suite for this bug.

Thu Aug 28 18:30:11 CEST 2003 Igor Zlatkovic <igor@zlatkovic.com>

	* libxslt/xsltexports.h libexslt/exsltexports.h: fixed typos reported by
	  Mark Vakoc 

Wed Aug 27 12:07:13 CEST 2003 Igor Zlatkovic <igor@zlatkovic.com>

	* libxslt/*.h: realigned parameters after taint

Wed Aug 27 09:59:54 CEST 2003 Igor Zlatkovic <igor@zlatkovic.com>

	* libxslt/xsltexports.h libexslt/exsltexports.h: fixed defs for 
	  Borland compiler, as reported by Eric Zurcher

Mon Aug 25 13:39:40 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/Makefile.am libexslt/Makefile.am: add the new header so they
	  get included in the distrib

Mon Aug 25 11:56:02 CEST 2003 Igor Zlatkovic <igor@zlatkovic.com>

	* libxslt/*.h libexslt/*.h: exportability taint of the headers.
	* libxslt/xsltexports.h libexslt/exsltexports.h: new files,
	  contain the export defs.

Tue Aug 19 00:38:46 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* xsltproc/Makefile.am libxslt/libxslt.h libxslt/numbersInternals.h
	  libexslt/*.c configure.in: applied patch from Mikhail Grushinskiy
	  for compilation with MingW compiler on Windows.

Mon Aug 18 14:42:12 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* keys.c: enhanced xsltInitCtxtKey to take care of multiple
	  instances of a key with the same namespace:name, reported
	  on the mailing list by Ian Young.  Added regression test
	  (bug-128).

Thu Aug 15 13:00:02 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* variables.c: fixed bug 119699 (missing error on shadowed
	  variable)
	* autogen.sh: removed dependency on automake-1.4, updated
	  links for fetching auto* tools