@@ -1,3 +1,8 @@
+Mon Sep  1 23:02:12 CEST 2003 Daniel Veillard <daniel@veillard.com>
+
+	* libxslt/function.c: patch from Mark Vadoc to allow compiling
+	  against libxml2 without XPointer supoort.
+
 Fri Aug 29 12:28:12 CEST 2003 Daniel Veillard <daniel@veillard.com>
 
 	* libxslt/transform.c: fixing the bug #120971 on cdata-section-elements
